# anime_recsys

./: .gitignore  README.md  eda.ipynb  popularity_recommendations.ipynb  pyproject.toml  schemas.py
