[tool.poetry]
name = "project-recommendations"
version = "0.1.0"
description = ""
authors = ["nedogeek <urunbaev.timur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
polars = "^1.16.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
scikit-learn = "^1.6.0"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
